contig-derive/tests/ui/generic_struct.stderr
error: #[contig] does not support generic structs; instantiate a concrete type
 --> tests/ui/generic_struct.rs:4:15
  |
4 | struct Generic<T> {
  |               ^
